--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Macol</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    />
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    rel="stylesheet"
+    />
+    <!-- <link href="/css/style.css" rel="stylesheet" /> -->
   </head>
   <body>
+    <audio src="/sounds/click.wav" id="click-sound"></audio>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
